-- vim: set expandtab:
Name:                Ocram
Version:             0.1
Synopsis:            Threads-to-Events compiler
Homepage:            https://github.com/copton/ocram
License:             GPL-2
License-file:        LICENSE
Author:              Alexander Bernauer <bernauer@inf.ethz.ch>
Maintainer:          Alexander Bernauer <bernauer@inf.ethz.ch>
Category:            Development
Tested-with:         GHC==7.0.3
Build-type:          Simple
Stability:           Experimental
Description: Translating cooperative threads into a semantically equivalent reactive code, thus combining the comfort of sequential programing with the efficiency of event-based systems.

Cabal-version:       >=1.10

Data-files:
  README,
  LICENSE

Extra-source-files:  
  util/pretty_ast/DumpAst.hs
  util/view_ast/ViewAst.hs

Executable Test
  Hs-Source-Dirs: src, test
  Main-is: Test.hs
  Default-language: Haskell98
  Default-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    TypeSynonymInstances,
    QuasiQuotes,
    GeneralizedNewtypeDeriving
  Build-depends:       
    language-c >= 0.4.2,
    base >= 4.0,
    containers >= 0.3.0.0,
    mtl >= 1.1.0.2,
    HUnit >= 1.2.2.1,
    template-haskell,
    bytestring >= 0.9.1.5,
    fgl >= 5.4.2.4
  Other-modules:
    Ocram.Test.Lib
    Ocram.Test.Main
    Ocram.Test.Tests.Analysis
    Ocram.Test.Tests.Analysis.TestCases
    Ocram.Test.Tests.Analysis.TestSuites
    Ocram.Test.Tests.Analysis.Types
    Ocram.Test.Tests.Analysis.Utils
    Ocram.Test.Tests.Symbol
    Ocram.Test.Tests.Transformation
    Ocram.Test.Tests.Transformation.Inline
    Ocram.Test.Tests.Visitor
    Ocram.Test.Tests.Visitor.Decl
    Ocram.Test.Tests.Visitor.Stat
    Ocram.Test.Tests.Visitor.TranslUnit
    Ocram.Test.Tests.Visitor.Utils

Executable Ocram
  Hs-Source-Dirs: src
  Ghc-Options: -Wall -Werror
  Main-is: Main.hs
  Default-language: Haskell98
  Default-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    TypeSynonymInstances,
    GeneralizedNewtypeDeriving
  Build-depends:       
    language-c >= 0.4.1,
    base >= 4.0,
    containers >= 0.3.0.0,
    mtl >= 1.1.0.2,
    fgl >= 5.4.2.4
  Other-modules:
    Ocram.Analysis
    Ocram.Analysis.CallGraph
    Ocram.Analysis.Fgl
    Ocram.Analysis.Filter
    Ocram.Analysis.Types
    Ocram.Main
    Ocram.Names
    Ocram.Options
    Ocram.Output
    Ocram.Parser
    Ocram.Symbols
    Ocram.Transformation.Inline
    Ocram.Transformation.Inline.FunctionInfo
    Ocram.Transformation.Inline.Names
    Ocram.Transformation.Inline.Step1
    Ocram.Transformation.Inline.Step2
    Ocram.Transformation.Inline.Step3
    Ocram.Transformation.Inline.Types
    Ocram.Transformation.Util
    Ocram.Types
    Ocram.Util
    Ocram.Visitor
    Ocram.Visitor.Traverse
    Ocram.Visitor.Visitor
