-- vim: set expandtab:
Name:                Ocram
Version:             0.1
Synopsis:            Threads-to-Events compiler
Homepage:            https://github.com/copton/ocram
License:             GPL-2
License-file:        LICENSE
Author:              Alexander Bernauer <bernauer@inf.ethz.ch>
Maintainer:          Alexander Bernauer <bernauer@inf.ethz.ch>
Category:            Development
Tested-with:         GHC==7.0.3
Build-type:          Simple
Stability:           Experimental
Description: Translating cooperative threads into a semantically equivalent reactive code, thus combining the comfort of sequential programing with the efficiency of event-based systems.

Cabal-version:       >=1.10

Data-files:
  README,
  LICENSE

Extra-source-files:  
  util/pretty_ast/DumpAst.hs
  util/view_ast/ViewAst.hs

Executable Ocram
  Hs-Source-Dirs: src
  Ghc-Options: -Wall
  Main-is: Main.hs
  Default-language: Haskell98
  Default-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    TypeSynonymInstances,
    GeneralizedNewtypeDeriving,
    TemplateHaskell
  Build-depends:       
    base >= 4 && < 5,
    language-c == 0.4.*,
    containers == 0.3.*,
    mtl == 1.1.*,
    fgl == 5.4.*,
    syb == 0.3.*,
    template-haskell
  Other-modules:
    Ocram.Analysis
    Ocram.Analysis.CallGraph
    Ocram.Analysis.Fgl
    Ocram.Analysis.Filter
    Ocram.Analysis.Types
    Ocram.Main
    Ocram.Names
    Ocram.Options
    Ocram.Output
    Ocram.Parser
    Ocram.Query
    Ocram.Symbols
    Ocram.Transformation.Inline
    Ocram.Transformation.Inline.Finalize
    Ocram.Transformation.Inline.Names
    Ocram.Transformation.Inline.Normalize
    Ocram.Transformation.Inline.ThreadFunction
    Ocram.Transformation.Inline.TStack
    Ocram.Transformation.Inline.Types
    Ocram.Transformation.Inline.UniqueIdentifiers
    Ocram.Transformation.Util
    Ocram.Types
    Ocram.Util
    Ocram.Visitor
    Ocram.Visitor.Traverse
    Ocram.Visitor.Visitor

Executable Test
  Hs-Source-Dirs: src, test
  Main-is: Test.hs
  Default-language: Haskell98
  Default-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    TypeSynonymInstances,
    QuasiQuotes,
    GeneralizedNewtypeDeriving
  Build-depends:       
    base >= 4 && < 5,
    language-c == 0.4.*,
    containers == 0.3.*,
    mtl == 1.1.*,
    HUnit == 1.2.*,
    bytestring == 0.9.*,
    fgl == 5.4.*,
    syb == 0.3.*,
    template-haskell
  Other-modules:
    Ocram.Test.Lib
    Ocram.Test.Main
    Ocram.Test.Tests.Analysis
    Ocram.Test.Tests.Analysis.TestCases
    Ocram.Test.Tests.Analysis.TestSuites
    Ocram.Test.Tests.Analysis.Types
    Ocram.Test.Tests.Analysis.Utils
    Ocram.Test.Tests.Symbol
    Ocram.Test.Tests.Transformation
    Ocram.Test.Tests.Transformation.Inline
    Ocram.Test.Tests.Transformation.Normalize
    Ocram.Test.Tests.Transformation.UniqueIdentifiers
    Ocram.Test.Tests.Visitor
    Ocram.Test.Tests.Visitor.Decl
    Ocram.Test.Tests.Visitor.Stat
    Ocram.Test.Tests.Visitor.TranslUnit
    Ocram.Test.Tests.Visitor.Utils
