-- vim: set expandtab:
Name:                ocram
Version:             0.1
Synopsis:            Threads-to-Events compiler
Homepage:            https://github.com/copton/ocram
License:             GPL-2
License-file:        LICENSE
Author:              Alexander Bernauer <bernauer@inf.ethz.ch>
Maintainer:          Alexander Bernauer <bernauer@inf.ethz.ch>
Category:            Development
Tested-with:         GHC==7.0.3
Build-type:          Simple
Stability:           Experimental
Description: Translating cooperative threads into a semantically equivalent reactive code, thus combining the comfort of sequential programing with the efficiency of event-based systems.

Cabal-version:       >=1.10

Executable ocram
  Hs-Source-Dirs: src
  Ghc-Options: -Wall
  Main-is: Main.hs
  Default-Language: Haskell98
  Default-extensions: 
  Build-Depends:       
    base >= 4 && < 5,
    language-c == 0.5.*,
    containers == 0.4.*,
    mtl == 1.1.*,
    fgl == 5.4.*,
    syb == 0.3.*,
    process == 1.1.*,
    template-haskell,
    bytestring == 0.9.*,
    pretty == 1.2,
    regex-posix == 0.95.*,
    filepath == 1.3.*,
    directory == 1.1.*,
    nano-md5 == 0.1.*,
    json == 0.5.*,
    MissingH == 1.1.*,
    HUnit == 1.2.*,
    test-framework == 0.6.*,
    test-framework-hunit == 0.2.*,
    hoopl == 3.8.7.4
  Other-modules:
    Main,
    Ocram.Analysis,
    Ocram.Analysis.CallGraph,
    Ocram.Analysis.CallGraph.Test,
    Ocram.Analysis.Fgl,
    Ocram.Analysis.Fgl.Test,
    Ocram.Analysis.Filter,
    Ocram.Analysis.Filter.Test,
    Ocram.Analysis.Test,
    Ocram.Analysis.Test.Cases,
    Ocram.Analysis.Test.Types,
    Ocram.Analysis.Types,
    Ocram.Debug,
    Ocram.IO,
    Ocram.Main,
    Ocram.Names,
    Ocram.Options,
    Ocram.Print,
    Ocram.Query,
    Ocram.Query.Test,
    Ocram.Symbols,
    Ocram.Symbols.Test,
    Ocram.Test,
    Ocram.Test.Lib,
    Ocram.Text,
    Ocram.Transformation,
    Ocram.Transformation.Names,
    Ocram.Transformation.Normalize,
    Ocram.Transformation.Normalize.Internal,
    Ocram.Transformation.Normalize.ShortCircuiting,
    Ocram.Transformation.Normalize.Test,
    Ocram.Transformation.Normalize.UniqueIdentifiers,
    Ocram.Transformation.Test,
    Ocram.Transformation.Translate,
    Ocram.Transformation.Translate.Internal,
    Ocram.Transformation.Translate.Test,
    Ocram.Transformation.Translate.ThreadFunctions,
    Ocram.Transformation.Types,
    Ocram.Transformation.Util,
    Ocram.Util
