-- vim: set expandtab:
Name:                Ocram
Version:             0.1
Synopsis:            Threads-to-Events compiler
Homepage:            https://github.com/copton/ocram
License:             GPL-2
License-file:        LICENSE
Author:              Alexander Bernauer <bernauer@inf.ethz.ch>
Maintainer:          Alexander Bernauer <bernauer@inf.ethz.ch>
Category:            Development
Tested-with:         GHC==7.0.3
Build-type:          Simple
Stability:           Experimental
Description: Translating cooperative threads into a semantically equivalent reactive code, thus combining the comfort of sequential programing with the efficiency of event-based systems.

Cabal-version:       >=1.10

Data-files:
  README.mkd,
  LICENSE

Extra-source-files:  
  util/pretty_ast/DumpAst.hs
  util/view_ast/ViewAst.hs

Executable ruab
  Hs-Source-Dirs: src
  Ghc-Options: -Wall
  Main-is: Main.hs
  Default-language: Haskell98
  Default-extensions: 
  Build-depends:       
    base >= 4 && < 5
  Other-modules:

Executable Test
  Hs-Source-Dirs: src, test
  Main-is: Test.hs
  Default-language: Haskell98
  Default-extensions: 
  Build-depends:       
    base >= 4 && < 5
  Other-modules:
