-- vim: set expandtab:
Name:                UniplateTest
Version:             0.1
Synopsis:            Threads-to-Events compiler
Homepage:            https://github.com/copton/ocram
License:             GPL-2
Author:              Alexander Bernauer <bernauer@inf.ethz.ch>
Maintainer:          Alexander Bernauer <bernauer@inf.ethz.ch>
Category:            Development
Tested-with:         GHC==7.0.3
Build-type:          Simple
Stability:           Experimental
Description: Translating cooperative threads into a semantically equivalent reactive code, thus combining the comfort of sequential programing with the efficiency of event-based systems.

Cabal-version:       >=1.10

Executable Test
  Hs-Source-Dirs: src
  Main-is: Main.hs
  Default-language: Haskell98
  Default-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    TypeSynonymInstances,
    QuasiQuotes,
    GeneralizedNewtypeDeriving
  Build-depends:       
    base >= 4 && < 5,
    uniplate == 1.6.*
  Other-modules:
    Ast
